--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "SeConstruire Backend API",
   "main": "server.ts",
   "scripts": {
-    "start": "npm run watch:server",
-    "watch:server": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' --delay 2 server.ts",
+    "start": "nodemon",
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'",
     "prettier": "prettier --write 'src/**/*.ts'",
@@ -17,13 +16,17 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5",
+    "firebase": "^9.12.0",
     "firebase-admin": "^9.12.0",
-    "firebase": "^9.12.0"
+    "lodash": "^4.17.21",
+    "mongoose": "^5.13.5",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.196",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
